refactoring DOM manupulation add text input to get the player name

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
         </meta>
     </head>
     <body>
+        <!-- <fieldset id="nameField" style="display: none;">
+            <legend>Player's name</legend>
+            <input id="inpName" type="text" placeholder="What is your name">
+            <button type="button" id="btnAddName">Add</button>
+        </fieldset> -->
     </body>
 </html>
