add API POST and GET user/score

--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
         </meta>
     </head>
     <body>
-        <!-- <fieldset id="nameField" style="display: none;">
-            <legend>Player's name</legend>
-            <input id="inpName" type="text" placeholder="What is your name">
-            <button type="button" id="btnAddName">Add</button>
-        </fieldset> -->
+        <!-- <table style="width:100%">
+            <tr>
+                <th>Player</th>
+                <th>Score</th>
+            </tr>
+            <tr>
+                <td>Jill</td>
+                <td>Smith</td>   
+            </tr>
+        </table> -->
     </body>
 </html>
