--- a/index.html
+++ b/index.html
@@ -11,15 +11,6 @@
         </meta>
     </head>
     <body>
-        <!-- <table style="width:100%">
-            <tr>
-                <th>Player</th>
-                <th>Score</th>
-            </tr>
-            <tr>
-                <td>Jill</td>
-                <td>Smith</td>   
-            </tr>
-        </table> -->
+        <div id="scoreTable"></div>
     </body>
 </html>
